--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -2,7 +2,7 @@ $black: #000;
 $white: #fff;
 $blue: #2fb5d2;
 @mixin title {
-    font-family: RobotoMono Medium;
+    font-family: RobotoMono;
     font-size: 13px;
     line-height: 1em;
     font-weight: 500;
