--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -73,6 +73,7 @@
                                     }
                                 }
                                 .recipe {
+                                    font-family: RobotoMono;
                                     text-decoration: underline;
                                     text-transform: uppercase;
                                     font-size: 13px;
