--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -1,6 +1,7 @@
 $black: #000;
 $white: #fff;
 $blue: #2fb5d2;
+$grey: #ccc;
 @mixin title {
     font-family: RobotoMono;
     font-size: 13px;
@@ -8,5 +9,5 @@ $blue: #2fb5d2;
     font-weight: 500;
     text-transform: uppercase;
     text-align: center;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
