--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -1,12 +1,14 @@
+@import "global.scss";
+
 .info-detailed {
     font-size: 14px;
-    h2 {
-        padding: 15px 0;
-        margin: 0;
-        border-top: 1px solid #CCCCCC;
-    }
     .info-detailed-title {
         position: relative;
+        h2 {
+            padding: 15px 0;
+            margin: 0;
+            border-top: 1px solid $grey;
+        }
         i {
             position: absolute;
             top: 10px;
@@ -54,13 +56,19 @@
                     }
                 }
             }
+            .block-category-inner {
+                .text-muted {
+                    @media (max-width: 768px) {
+                        margin-top: 30px;
+                    }
+                }
+            }
         }
     }
 }
 
 .product-accessories {
-    padding: 30px 0;
-    border-top: 1px solid #ccc;
+    margin: 120px 0;
     .h5 {
         text-align: center;
         text-transform: uppercase!important;
