--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -51,12 +51,10 @@
                     padding: 0;
                     #search_widget {
                         position: absolute;
-                        top: -115px;
-                        right: 30%;
-                        @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
-                            top: -70px;
-                            right: 20px;
-                        }
+                        // top: -115px;
+                        // right: 30%;
+                        top: -70px;
+                        right: 20px;
                         @media (max-width: 768px) {
                             margin-top: 20px;
                             width: 100%;
@@ -73,7 +71,7 @@
                         ul {
                             display: flex;
                             justify-content: space-between;
-                            @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+                            @media only screen and (min-device-width: 769px) and (max-device-width: 1024px) {
                                 justify-content: center;
                                 flex-wrap: wrap;
                             }
